# maddevs-test

./: .gitignore  README.md  pyproject.toml
src/cli/: main.py  split_msg.py
src/msg_split/: exceptions.py  msg_split.py
tests/: test_msg_split.py
